# rust-dbf-parser

./: .gitignore  Cargo.toml
src/: config.rs  exporters.rs  main.rs  my_record.rs
src/exporters/: csv_exporter.rs  google_sheets_exporter.rs
