[package]
name = "rust-dbf-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
dbase = "0.4.0"
google-sheets4 = "5.0.2"
hyper = "0.14.27"
hyper-rustls = { version = "0.24.0", features = ["http2"] }
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.5"
